--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <h1>welcome</h1>
+    <a href="https://genius-devops.github.io/fullstack-dev-community/">click</a>
 </body>
 </html>
