my javaScript learning commit

--- a/index.html
+++ b/index.html
@@ -6,7 +6,23 @@
     <title>full stack dev community</title>
 </head>
 <body>
-    <h1>welcome</h1>
-    <a href="https://genius-devops.github.io/fullstack-dev-community/">click</a>
+<h1>welcome</h1>
+<a href="https://genius-devops.github.io/fullstack-dev-community/">click</a>
+<blockquote>this is block quotes</blockquote>
+<abbr title="MongoDB ExpressJs ReactJs NodeJs">MERN</abbr><br>
+<cite>mernstack devs</cite>
+<script>
+function moveon() {
+ // Display a modal dialog to ask the user a question
+ var answer = confirm("Ready to move on?");
+ // If they clicked the "OK" button, make the browser load a new page
+ if (answer) window.location = "http://google.com";
+}
+// Run the function defined above 1 minute (60,000 milliseconds) from now.
+setTimeout(moveon, 60000);
+
+
+</script>
+        
 </body>
 </html>
